--- a/packages/translation/package.json
+++ b/packages/translation/package.json
@@ -23,6 +23,10 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "dayjs": "^1.11.11",
+    "next-international": "^1.2.4"
+  },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
@@ -30,8 +34,5 @@
     "eslint": "^9.4.0",
     "typescript": "^5.4.5"
   },
-  "prettier": "@homarr/prettier-config",
-  "dependencies": {
-    "next-international": "^1.2.4"
-  }
+  "prettier": "@homarr/prettier-config"
 }
