--- a/packages/translation/package.json
+++ b/packages/translation/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@homarr/translation",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
   "type": "module",
   "exports": {
     ".": "./index.ts",
@@ -16,13 +17,13 @@
       ]
     }
   },
-  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "dayjs": "^1.11.13",
     "mantine-react-table": "2.0.0-beta.6",
@@ -34,6 +35,5 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
