--- a/packages/translation/package.json
+++ b/packages/translation/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "exports": {
     ".": "./index.ts",
-    "./client": "./src/client.ts",
+    "./client": "./src/client/index.ts",
     "./server": "./src/server.ts",
     "./middleware": "./src/middleware.ts",
     "./request": "./src/request.ts"
@@ -26,10 +26,12 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@homarr/common": "workspace:^0.1.0",
     "dayjs": "^1.11.13",
     "mantine-react-table": "2.0.0-beta.7",
-    "next-international": "^1.2.4",
-    "next-intl": "3.23.2"
+    "next-intl": "3.23.2",
+    "next": "^14.2.16",
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
