--- a/packages/translation/package.json
+++ b/packages/translation/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
     "dayjs": "^1.11.13",
+    "deepmerge": "4.3.1",
     "mantine-react-table": "2.0.0-beta.7",
     "next": "^14.2.16",
     "next-intl": "3.23.2",
