fix: issues with loading dayjs and mantine-react-table translations

--- a/packages/translation/package.json
+++ b/packages/translation/package.json
@@ -10,7 +10,7 @@
     "./server": "./src/server.ts",
     "./middleware": "./src/middleware.ts",
     "./request": "./src/request.ts",
-    "./provider": "./src/provider.tsx"
+    "./dayjs": "./src/dayjs.ts"
   },
   "typesVersions": {
     "*": {
